syntax = "proto3";

package pig;

option java_package = "com.pigfarm.pig";
option java_multiple_files = true;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;

}

message PigsRequest {
  string productId = 1;
}

message PigsResponse {
  repeated PigObject pigs = 1;
}

message PigObject {
  string id = 1;
  double weight = 2;
}

message ProductRequest {
  string pigId = 1;
}

message ProductResponse {
  repeated ProductObject products = 1;
}

message ProductObject {
  string id = 1;
  string weight = 2;
}


service PigService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc FindPigsFromProduct(PigsRequest) returns (PigsResponse);
  rpc FindProductsFromPigs(ProductRequest) returns (ProductResponse);
}